2006-01-20  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/DefaultStyledDocument.java
	(pad): Removed, not needed.
	(printElements): Likewise.
	(printEdit): Likewise.

2006-01-20  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/DefaultFormatter.java
	(DefaultFormatter): Don't set a value class.

2006-01-19  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/DefaultCellEditor.java: Commented.

2006-01-19  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JOptionPane.java
	Added cast to Frame for JDialog constructor.

2006-01-19  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JWindow.java
	(JWindow(Window)): Fixed to accept null owner argument.
	(JWindow(Window,GraphicsConfiguration)): Fixed to accept null
	owner argument.
	* javax/swing/SwingUtilities.java
	(getOwnerFrame): Owner parameter and return value are fixed to
	be of type Window for compatibity with the above JWindow
	constructor.
	* javax/swing/JDialog.java
	(JDialog): Added cast to Frame to make sure the correct constructor
	is called.
	* javax/swing/JFileChooser.java
	(createDialog): Added cast to Frame for JDialog constructor.

2006-01-19  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/JTable.java (rowAtPoint): Rewritten.

2006-01-19  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JWindow.java: Added API docs to the constructors.

2006-01-19  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/JTable.java: Commenting method headers.
	(EditorUpdateTimer): Removed.

2006-01-19  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JDialog.java
	(JDialog()): Call SwingUtilities.getOwnerFrame() with null.
	(JDialog(Frame,String,boolean,GraphicsConfiguration)): Call
	SwingUtilities.getOwnerFrame() with the owner argument.
	* javax/swing/JFileChooser.java
	(showOpenDialog(Component)): Call pack() on the dialog instead of
	setting	a fixed height.
	(showSaveDialog()): Likewise.
	(showDialog()): Likewise.